[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/banana.png" type="Texture" id=1]
[ext_resource path="res://sources/script/ObjectFell.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Fell"
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1000 ) ]
}

[node name="Node2D" type="Node2D"]

[node name="Container" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Container"]
scale = Vector2( 0.311764, 0.311764 )
texture = ExtResource( 1 )

[node name="ObjectHitbox" type="Area2D" parent="Container"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Container/ObjectHitbox"]
polygon = PoolVector2Array( 55.0412, -38.8337, 64.291, -33.2628, 57.669, -20.8595, 64.0808, 0.688435, 53.9209, 20.6358, 22.8953, 35.4399, -32.5412, 34.0225, -59.157, 14.3362, -65.9291, -2.35775, -61.2044, -6.92497, -34.2736, 4.41432, -0.4132, 9.13903, 21.163, 2.68193, 46.5189, -23.3039 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/ObjectHitbox"]
anims/Fell = SubResource( 1 )
[connection signal="input_event" from="Container/ObjectHitbox" to="Container/ObjectHitbox" method="_on_ObjectHitbox_input_event"]
[connection signal="input_event" from="Container/ObjectHitbox" to="Container/ObjectHitbox" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Container/ObjectHitbox" to="Container/ObjectHitbox" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Container/ObjectHitbox" to="Container/ObjectHitbox" method="_on_Area2D_mouse_exited"]
